[package]
name        = "paigasus-helikon"
description = "Paigasus AI SDK — facade crate. Re-exports core plus feature-gated providers and runtimes."
version                = "0.1.1"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
paigasus-helikon-core                = { workspace = true }
paigasus-helikon-macros              = { workspace = true, optional = true }
paigasus-helikon-providers-openai    = { workspace = true, optional = true }
paigasus-helikon-providers-anthropic = { workspace = true, optional = true }
paigasus-helikon-mcp                 = { workspace = true, optional = true }
paigasus-helikon-tools               = { workspace = true, optional = true }
paigasus-helikon-runtime-tokio       = { workspace = true, optional = true }
paigasus-helikon-runtime-axum        = { workspace = true, optional = true }
paigasus-helikon-runtime-temporal    = { workspace = true, optional = true }
paigasus-helikon-runtime-agentcore   = { workspace = true, optional = true }
paigasus-helikon-sessions-sqlite     = { workspace = true, optional = true }
paigasus-helikon-evals               = { workspace = true, optional = true }

[features]
default            = []
macros             = ["dep:paigasus-helikon-macros"]
openai             = ["dep:paigasus-helikon-providers-openai"]
providers-openai   = ["dep:paigasus-helikon-providers-openai"]
anthropic          = ["dep:paigasus-helikon-providers-anthropic"]
mcp                = ["dep:paigasus-helikon-mcp"]
tools              = ["dep:paigasus-helikon-tools"]
evals              = ["dep:paigasus-helikon-evals"]
runtime-tokio      = ["dep:paigasus-helikon-runtime-tokio"]
runtime-axum       = ["dep:paigasus-helikon-runtime-axum"]
runtime-temporal   = ["dep:paigasus-helikon-runtime-temporal"]
runtime-agentcore  = ["dep:paigasus-helikon-runtime-agentcore"]
sessions-sqlite    = ["dep:paigasus-helikon-sessions-sqlite"]

[dev-dependencies]
# Installs git hooks from .cargo-husky/hooks/ when this crate's
# dev-deps are realized (e.g. `cargo test -p paigasus-helikon --no-run`).
# See SMA-335 design doc §4.
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
# Trybuild for the facade_only_consumer UI test (SMA-385 §5.5 — moved
# here from paigasus-helikon-macros to break the publish-time dep cycle).
# serde_json is required because the #[tool] macro expansion emits
# `::serde_json::…` paths directly (see -macros/src/expand.rs).
trybuild    = { workspace = true }
schemars    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
# Required by the leukemia_classifier example (SMA-320).
tokio       = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow      = { workspace = true }

[[example]]
name              = "leukemia_classifier"
required-features = ["anthropic"]

[lints]
workspace = true
